--- a/doc-3dbox-trans.io/doc.html
+++ b/doc-3dbox-trans.io/doc.html
@@ -3,9 +3,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="nukeX.css">
     <title>3d Box Trans-Effect</title>
 </head>
 <body>
-    
+    <main class="container">
+        <div class="area-3d">
+            <div class="box3d">D</div>
+        </div>
+    </main>
 </body>
 </html>
